--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ skin: "/assets/css/skins/default.css"
 locale: en-US
 title: "My Awesome Site"
 description: "It really is the best."
-baseurl: # the subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-logo: # path of site logo, e.g. "/images/logo.png"
+baseurl: "/ken-simple"
+url: "https://kkk1we.github.io"
+remote_theme: "mmistakes/so-simple-theme"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
 words_per_minute: # 200
